[package]
name = "mullvad-cli"
version = "0.0.0"
authors = ["Mullvad VPN"]
description = "Manage the Mullvad VPN daemon via a convenient CLI"
license = "GPL-3.0"
edition = "2021"
publish = false

[[bin]]
name = "mullvad"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0", features = ["cargo"] }
crossterm = { version = "0.25.0", features = ["event-stream"] }
err-derive = "0.3.1"
env_logger = "0.10.0"
flume = "0.10.14"
futures = "0.3"
futures-timer = "3.0.2"
natord = "1.0.9"
serde = "1.0"
itertools = "0.10"
parking_lot = "0.12.1"
tokio-stream = "0.1.11"
tui = "0.19.0"

mullvad-types = { path = "../mullvad-types" }
mullvad-paths = { path = "../mullvad-paths" }
mullvad-version = { path = "../mullvad-version" }
talpid-types = { path = "../talpid-types" }

mullvad-management-interface = { path = "../mullvad-management-interface" }
tokio = { version = "1.8", features =  [ "rt-multi-thread", "fs" ] }

[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
clap_complete = { version = "3.0" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
mullvad-version = { path = "../mullvad-version" }

[target.'cfg(windows)'.build-dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_System_SystemServices",
]

[package.metadata.winres]
ProductName = "Mullvad VPN"
CompanyName = "Mullvad VPN AB"
LegalCopyright = "(c) 2023 Mullvad VPN AB"
InternalName = "mullvad-cli"
OriginalFilename = "mullvad.exe"
