[package]
name = "talpid-macos"
description = "Nice abstractions for macOS"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
err-derive = { workspace = true }
system-configuration = "0.5.1"
ipnetwork = "0.16"
once_cell = { workspace = true }
