[package]
name = "talpid-openvpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
async-trait = "0.1"
atty = "0.2"
cfg-if = "1.0"
duct = "0.13"
err-derive = "0.3.1"
futures = "0.3.15"
hex = "0.4"
ipnetwork = "0.16"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
os_pipe = "0.9"
parking_lot = "0.11"
regex = "1.1.0"
shell-escape = "0.1"
talpid-core = { path = "../talpid-core" }
talpid-types = { path = "../talpid-types" }
talpid-time = { path = "../talpid-time" }
talpid-tunnel-config-client = { path = "../talpid-tunnel-config-client" }
uuid = { version = "0.8", features = ["v4"] }
zeroize = "1"
chrono = "0.4.19"
tokio = { version = "1.8", features = ["process", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
rand = "0.7"
tunnel-obfuscation = { path = "../tunnel-obfuscation" }
shadowsocks-service = { version = "1.14.3", default-features = false, features = ["local", "stream-cipher"] }
which = { version = "4.0", default-features = false }




[target.'cfg(not(target_os="android"))'.dependencies]
byteorder = "1"
internet-checksum = "0.2"
socket2 = { version = "0.4.2", features = ["all"] }
parity-tokio-ipc = "0.9"
triggered = "0.1.1"
tonic = "0.5"
prost = "0.8"

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
