[package]
name = "abstract-tun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = { version = "0.5", default-features = false }
log = "0.4"
anyhow = "1"
tokio = { version = "1", features = [ "rt", "sync", "io-util", "net", "time", "fs", "macros" ] }
futures = "0.3"
rand = "0.8"
nom = "7"
async-trait = "0.1"
priority-queue = "1.3.0"
smoltcp = { version = "0.8.2", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"] }
bytes = "1"
x25519-dalek = "2.0.0-pre.1"
libc ="*"

[build-dependencies]
cbindgen = "0.24"

[lib]
crate-type = [ "staticlib" ]

[profile.release]
debug = true
lto = false

# [profile.debug]
# lto = false
