[package]
name = "test-manager-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3.4" }
err-derive = { workspace = true }
clap = { workspace = true }
